# app/Http/Requests/Api/V1/User/CompanyActivityTypeStoreRequest.php
@@ -1,0 +1,29 @@
+<?php
+
+namespace App\Http\Requests\Api\V1\User;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class CompanyActivityTypeStoreRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'activity_type_ids' => 'required|array|min:1',
+            'activity_type_ids.*' => 'integer|exists:company_activity_types,id',
+        ];
+    }
+}
